Payload from DB

--- a/Utilities/properties.ini
+++ b/Utilities/properties.ini
@@ -1,2 +1,9 @@
 [APIS]
 URL = https://simple-grocery-store-api.glitch.me
+
+[SQL]
+user = root
+password = Viknesh1302@
+host = localhost
+database = Useraccount
+
